--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/styled-components": "^5.1.11",
     "@types/uuid": "^8.3.1",
     "bootstrap": "4.6.0",
+    "date-fns": "^2.22.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "graphql": "^15.5.1",
     "react": "^17.0.2",
