update README.md & add firebase hosting

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "serve:build": "serve -s build"
+    "serve": "yarn build && serve -s build",
+    "deploy": "yarn build && firebase deploy --only hosting"
   },
   "eslintConfig": {
     "extends": [
